--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header> Asheley Howard Brown</header>
+        <div class="content-container">
+            <p>About Me</p>
+            <p>Info about me</p>
+            <p>Techniques</p>
+                <ul>
+                    <li class="skills1">Computer Programming Languages</li>
+                        <ul>
+                            <li class="skills2">HTML/CSS</li>
+                            <li class="skills2">SQL</li>                            
+                        </ul>
+                    <li class="skills1">Software development</li>
+                    <li class="skills1">Software testing and debugging</li>
+                    <li class="skills1">Problem solving and logical thinking</li>
+                    <li class="skills1">Written and verbal communication</li>
+                    <li class="skills1">Teamwork</li>
+                </ul>
+
+        </div>
+        <footer class="footer-conter">
+            <div class="github">
+                <p>https://github.com/asheleymonique00</p>
+            </div>
+            <div class="gmail">
+                <p>asheleymonique00@gmail.com</p>
+            </div>
+            <div class="phone">
+                <p>502.931.7577</p>
+            </div>
+            <div class="resume">
+                <p>Resume</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
