--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                     <li class="skills1">Problem solving and logical thinking</li>
                     <li class="skills1">Written and verbal communication</li>
                     <li class="skills1">Teamwork</li>
-                </ul>
-
+                </ul>                
         </div>
-        <footer class="footer-conter">
+        <div class="image-container">
+            <img src="https://github.com/asheleymonique00/asheleymonique00.github.io/blob/master/AsheleyHowardBrown2.jpg?raw=true"
+            alt="AsheleyHowardBrownPicture">
+        </div>
+        <footer class="footer-container">
             <div class="github">
                 <p>https://github.com/asheleymonique00</p>
             </div>
