--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <header> Asheley Howard Brown</header>
+
         <div class="content-container">
-            <p>About Me</p>
-            <p>Info about me</p>
+            <div class="aboutme">
+                <header> Asheley Howard Brown</header>
+                <p>About Me</p>
+                <p>Info about me</p>
+            </div>
+            <div class="techniques">
             <p>Techniques</p>
                 <ul>
                     <li class="skills1">Computer Programming Languages</li>
@@ -24,7 +28,8 @@
                     <li class="skills1">Problem solving and logical thinking</li>
                     <li class="skills1">Written and verbal communication</li>
                     <li class="skills1">Teamwork</li>
-                </ul>                
+                </ul>               
+             </div>    
         </div>
         <div class="image-container">
             <img src="https://github.com/asheleymonique00/asheleymonique00.github.io/blob/master/AsheleyHowardBrown2.jpg?raw=true"
@@ -32,7 +37,7 @@
         </div>
         <footer class="footer-container">
             <div class="github">
-                <p>https://github.com/asheleymonique00</p>
+                <p>https://asheleymonique00.github.io/</p>
             </div>
             <div class="gmail">
                 <p>asheleymonique00@gmail.com</p>
