About me update

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
         <div class="content-container">
             <div class="aboutme">
-                <header> Asheley Howard Brown</header>
+                <header>
+                    <h1 class="name">Asheley Howard Brown</h1>
+                </header>
                 <p>About Me</p>
-                <p>Info about me</p>
+                <div class="aboutmeinfo">
+                <p>Let's work smarter not harder.</p>
+                </div>
             </div>
             <div class="techniques">
             <p>Techniques</p>
